# insilicho

./: .gitignore  LICENSE.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: python_tests.yml
docs/: conf.py  index.rst  modules.rst
insilicho/: .gitignore  chemistry.py  cho_doe.py  growth_model.py  mypy.ini  parameters.py  plotter.py  pyproject.toml  reactor.py  run.py  solver.py  units.py  util.py
insilicho/docs/: index.rst
insilicho/insilicho/: chemistry.py  feed_model.py  parameters.py  plotter.py  reactor.py  solver.py  units.py
insilicho/tests/: cfg.yaml  test_app.py
test-metadata/: junit.xml
tests/: conftest.py  run_doe.py  test_app.py  test_bolus_feeding.py  test_determinism.py  test_growth_model.py  test_insilicho_run.py  test_solver.py  test_solver_with_feed.py
