[tool.poetry]
name = "insilicho"
version = "1.1.4"
description = "An insilico model for CHO cells"
authors = ["Culture Biosciences <matt@culturebiosciences.com>",]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scipy = ">1.7.0"
numpy = "=1.23.5"
pandas = "^1.5.0"
Pint = "^0.19.2"
mypy = "^0.991"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
matplotlib = "^3.6.2"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
